--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>this is to check copy from scm to apache </h1>
+<h1>this is to check copy from scm to s3 </h1>
 <h1>My First Heading</h1>
 
 <p>My first paragraph.</p>
