--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 <h1>this is to check copy from scm to s3 </h1>
+  <h1>this is to check copy from s3 to cloudfront </h1>
 <h1>My First Heading</h1>
 
 <p>My first paragraph.</p>
